# wasm-bindgen-duck-typing-clipboard

./: Cargo.toml  index.html
src/: lib.rs
