[package]
name = "wasm-bindgen-duck-typing-clipboard"
version = "0.1.0"
authors = ["Kenichi Ishibashi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Blob",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
